# tutorial-cpp-cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  sonar-scanner.cmd  vcpkg.json
src/: CMakeLists.txt
src/oper/: AddClass.cpp  AddClass.hpp  CMakeLists.txt  MultiplyClass.cpp  MultiplyClass.hpp
src/operations/: CMakeLists.txt  Operations.cpp
tests/: CMakeLists.txt
tests/boost/: CMakeLists.txt  example_add.cpp  example_subtract.cpp  main.cpp
tests/ctest/: CMakeLists.txt  checker.cpp  checker.hpp
tests/ctest/test_add/: CMakeLists.txt  main.cpp
tests/ctest/test_multiply/: CMakeLists.txt  main.cpp
